--- a/.gitignore
+++ b/.gitignore
@@ -10,24 +10,47 @@ target/
 .factorypath
 .project
 .settings
-.springBeans
-.sts4-cache
+# Compiled class file
+*.class
 
-### IntelliJ IDEA ###
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# extra gradle files to ignore
 .idea
-*.iws
 *.iml
-*.ipr
+target/
+.gradle/
+**/results/
+**/build/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# Ignore Gradle project-specific cache directory
+.gradle
 
-### VS Code ###
-.vscode/
+# Ignore Gradle build output directory
+build
+
+# ignoring jar files except for gradle wrapper
+!gradle/wrapper/gradle-wrapper.jar
+
+# ignores all DS_Store files
+**/.DS_Store
+.DS_Store
