--- a/functional-tests/build.gradle
+++ b/functional-tests/build.gradle
@@ -1,18 +1,41 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.5.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
-
-version 'unspecified'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    //Import service module to enable starting service application from ft
+    testImplementation project(":book-library-service")
+    testImplementation project(":book-library-service").sourceSets.main.output
+
+    //Developer tools and testing frameworks
+    testImplementation 'org.projectlombok:lombok:1.18.16'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok:1.18.16'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+    testImplementation "org.mockito:mockito-core:3.+"
+
+    //Cucumber
+    testImplementation group: 'io.cucumber', name: 'cucumber-spring', version: '6.10.4'
+    testImplementation group: 'io.cucumber', name: 'cucumber-java', version: '6.10.4'
+    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '6.10.4'
 }
 
-test {
-    useJUnitPlatform()
+configurations {
+    cucumberRuntime {
+        extendsFrom testImplementation
+    }
 }
+
+bootJar.enabled=false
+jar.enabled=false
