--- a/book-library-service/build.gradle
+++ b/book-library-service/build.gradle
@@ -12,8 +12,13 @@ repositories {
 }
 
 dependencies {
+
+    //spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     annotationProcessor 'org.projectlombok:lombok'
@@ -21,6 +26,8 @@ dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.6.0'
     testImplementation "org.mockito:mockito-core:3.+"
 
+    //h2 database
+    runtimeOnly 'com.h2database:h2'
 
 }
 
