--- a/book-library-service/src/main/resources/application.yml
+++ b/book-library-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ management:
     web:
       base-path: "/private"
       exposure:
-        include: "info,env"
+        include: "info,env,prometheus"
       path-mapping:
         prometheus: "metrics"
   info:
@@ -12,6 +12,12 @@ management:
     git:
       mode: "SIMPLE"
       enabled: true
+
+spring:
+  security:
+    user:
+      name: Admin
+      password: Password
 
 info:
   app:
